fixed spacing

--- a/pages/css/mission.css
+++ b/pages/css/mission.css
@@ -13,7 +13,7 @@
 }
 
 .statement {
-  font-size: 40px;
+  font-size: 2em;
   font-family: 'normal';
   font-weight: lighter;
   color: rgb(75, 75, 75);
@@ -25,7 +25,7 @@
 }
 
 .growth-statement {
-  font-size: 220%;
+  font-size: 2em;
   font-family: 'normal';
   font-weight: lighter;
   color: rgb(75, 75, 75);
